# youtube-pipeline

./: .gitignore  README.md  config.yaml  pyproject.toml
docs/: current_limitations.md  optimization_targets.md  pipeline_overview.md
src/youtube_pipeline/: __init__.py  __main__.py  beat_io.py  beats.py  config.py  contact_sheet.py  dense_apply.py  dense_beat_review.py  dense_beats.py  dense_handoff.py  dense_images.py  dense_prompts.py  dense_render.py  errors.py  generated_images.py  images.py  manifest.py  models.py  production_audit.py  prompts.py  render.py  render_benchmark.py  render_ffmpeg.py  script_audit.py  script_quality.py  srt_parser.py  time_utils.py  whiteboard.py
templates/: script_brief_template.md  script_writer_prompt.md
tests/: test_beats.py  test_cli_v2.py  test_dense_apply.py  test_dense_beat_review.py  test_dense_beats.py  test_dense_handoff.py  test_dense_images.py  test_dense_prompts.py  test_dense_render.py  test_generated_images.py  test_images.py  test_manifest.py  test_production_audit.py  test_prompts.py  test_render_benchmark.py  test_render_ffmpeg.py  test_render_kinetic.py  test_script_audit.py  test_script_quality.py  test_srt_parser.py
