[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-pipeline"
version = "0.1.0"
description = "Local deterministic video production pipeline for voiceover and SRT inputs."
requires-python = ">=3.10"
dependencies = [
    "moviepy>=2.0,<3.0",
    "pillow>=10.0",
    "imageio-ffmpeg>=0.5",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
